# legal-agent

./: .gitignore  README.md  docdeepseek.txt  extract_docx.py
.kiro/agents/: code-dev.md
.kiro/specs/web-chat-app/: .config.kiro  design.md  requirements.md  tasks.md
script/: extract_docx.py  txt_to_json.py
web-chat-app/: proxy.py  pyproject.toml
web-chat-app/backend/: __init__.py  agent.py  config.py  main.py  session_context.py  tools.py
web-chat-app/backend/legal_konwlegde/: gongshangbaoxiantiaoli.json  laodongfa.json  laodonghetongfa.json  legal_docs_index.json  minfadian.json  shehuibaoxianfa.json  xianfa.json  xingfa.json  zjgongshangbaoxaintiaoli.json
web-chat-app/backend/routes/: __init__.py  chat.py  upload.py
web-chat-app/backend/tools/: __init__.py  fetch_webpage.py  get_current_datetime.py  init_lg_db.py  pinecone_search.py  query_legal.py  search_uploaded_file.py  web_search.py
web-chat-app/frontend/: index.html  main.js  styles.css
