[project]
name = "web-chat-app"
version = "0.1.0"
description = "Web Chat Application with AI Legal Advisor"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "openai-agents>=0.18.3",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.6",
    "python-docx>=0.8.11",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
